[package]
name = "discord-archive-selfbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
born = "0.0.1"
bson = { version = "2.5.0", features = ["chrono", "serde_with"] }
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.8", features = ["derive"] }
mongodb = "2.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_with = { version = "2.2.0", features = ["chrono"] }
serenity = { version = "0.11.5", git = "https://github.com/HonbraDev/serenity-selfbot.git", default-features = false, features = [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
    "rustls_backend",
] }
thiserror = "1.0.38"
tokio = { version = "1.26.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "fs",
] }
toml = "0.7.2"
uuid = { version = "1.3.0", features = ["serde"] }
